<resources>
    <string name="app_name">NMedia</string>
    <string name="hello">Hello World!</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="description_post_like">Like</string>
    <string name="description_post_share">Share</string>
    <string name="description_post_save">Save</string>
    <string name="menu_remove">Remove</string>
    <string name="post_text">Post Text</string>
    <string name="menu_edit">Edit</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="str_ic_likes">Like icon</string>
    <string name="str_ic_reposts">Repost icon</string>
    <string name="str_ic_views">Views icon</string>
    <string name="str_ic_close_editing">Close Editing Icon</string>
    <string name="str_ic_edit">Edit icon</string>
    <string name="str_head_edit_post">Edit post</string>
    <string name="chooser_share_post">Share post</string>
    <string name="add_post">Add post</string>
    <string name="save">Save</string>
    <string name="text_head_edit_tw">Editable post</string>
    <string name="text_video_ib">There should be a video here</string>
    <string name="text_play_video_ib">There should be a video launch button here</string>
    <string name="google_play_unavailable">Google Api Unavailable</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="notification_new_post">%1$s posted a new post:</string>
    <string name="no_posts">No posts</string>
    <string name="internet_error">Internet Error</string>
    <string name="button_text_retry">retry</string>
    <string name="text_attachment_iv">Attachment Image</string>
    <string name="like_error">Failed to like</string>
    <string name="unlike_error">Couldn\'t remove the like</string>
    <string name="remove_error">Failed to delete post</string>
    <string name="save_error">Failed to save post</string>
    <string name="load_error">Failed to load posts from the server</string>
    <string name="error_loading">Data loading error</string>
    <string name="empty_posts">There are no posts.\\nIf you create a new post, it will appear here</string>
    <string name="retry_loading">Retry</string>
    <string name="recent_recording">Recent recording</string>
    <string name="text_number_of_photo">1 of 1</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="retry">Retry</string>


</resources>